<resources>
    <string name="app_name">Stage Fromage</string>
    // Nom dans la ToolBar
    <string name="title_activity_maps">Localisation entreprises</string>
    <string name="title_activity_modifier_entreprise">Modifier entreprise</string>
    <string name="title_activity_ajouter_entreprise">Ajouter entreprise</string>
    <string name="title_activity_menu">Entreprises</string>
    // Page de connexion
    <string name="login_username_hint">Nom d\'utilisateur</string>
    <string name="login_password_hint">Mot de passe</string>
    <string name="login_connexion">Connexion</string>
    <string name="login_inscription">Vous n’avez pas de compte ? Inscrivez-vous</string>
    // Page d'inscription
    <string name="inscr_titre">Inscription</string>
    <string name="inscr_prenom_hint">Prenom</string>
    <string name="inscr_nom_hint">Nom</string>
    <string name="inscr_email_hint">Courriel</string>
    <string name="inscr_password_hint">Mot de passe</string>
    <string name="inscr_password_confirm_hint">Confirmer le mot de passe</string>
    // Page de menu
    <string name="selec_toutes">Toutes</string>
    <string name="selec_favories">Favorites</string>
    <string name="selec_nom">Par nom</string>
    <string name="selec_date">Par date</string>
    <string name="selec_stage">Par stage</string>
    // Ajout et modification d'entreprise
    <string name="edit_entreprise_nouvelle">Nouvelle Entreprise</string>
    <string name="edit_entreprise_nom_hint">Nom de l\'entreprise</string>
    <string name="edit_entreprise_contact_hint">Nom du contact</string>
    <string name="edit_entreprise_courriel_hint">Courriel</string>
    <string name="edit_entreprise_telephone_hint">Telephone</string>
    <string name="edit_entreprise_web_hint">Site Web</string>
    <string name="edit_entreprise_adresse_hint">Adresse</string>
    <string name="edit_entreprise_date_hint">Date du contact</string>
    <string name="edit_entreprise_btn_date">Choisir date</string>
    <string name="edit_entreprise_btn_valider">Valider</string>
    <string name="edit_entreprise_btn_supprimer">Supprimer</string>
    //visuel étudiant
    <string name="view_etudiant_titre">Fiche de renseignements</string>
    <string name="view_etudiant_nom">Nom : </string>
    <string name="view_etudiant_prenom">Prénom : </string>
    <string name="view_etudiant_email">Email : </string>
    <string name="view_etudiant_stage">Stage trouvé : </string>
    <string name="view_etudiant_nombre_entreprises">Nombre d\'entreprises contactées : </string>


</resources>